# python-project-50

./: Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: github-actions.yml
gendiff/: demo.cast
gendiff/modules/: difference.py  parser.py  test.py
gendiff/scripts/: gendiff.py
tests/: test_difference.py
